--- a/02 Module CSS/index.html
+++ b/02 Module CSS/index.html
@@ -10,12 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Magra:wght@400;700&display=swap" rel="stylesheet">
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <h1 class="h11">Hello World</h1>
+    <!-- <h1 class="h11">Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, impedit!</p>
 
 
@@ -30,9 +32,30 @@
 
     <div>
         <i class="fa-brands fa-facebook">Facebook</i>
-        
         <i class="fa-brands fa-facebook-messenger"></i>
     </div>
+    <hr> -->
+    <!-- <div class="container">
+        <div class="first">This is first</div>
+        <div class="second">Second</div>
+    </div> -->
+
+
+
+
+
+
+    <div class="container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+    </div>
+
+
+
+
+
+
 </body>
 
 </html>
