--- a/03.5 practice day/legal-advicer-main/index.html
+++ b/03.5 practice day/legal-advicer-main/index.html
@@ -17,70 +17,27 @@
 
 
 
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
 
 
 
-    <nav class="navbar navbar-expand-lg bg-info fixed-top">
-        <div class="container-fluid">
-            <img class="w-auto" src="/resources/Group 500.png" alt="">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="offcanvas offcanvas-end text-bg-info" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-
-                    </ul>
-                    <i class="fa-solid fa-magnifying-glass fa-bounce"
-                        style="padding-top: 15px; font-size: 25px; padding-right: 50px; color: white;"></i>
-                </div>
-            </div>
-        </div>
-    </nav>
 
 
 
-    <!-- body -->
-    <main>
-
-        <div class="body-part d-flex">
-            <div class="left-info">
-                <h1>Find your lawyer </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, praesentium!</p>
-                <button class="btn btn-outline-info">Get Started</button>
-            </div>
-            <div class="right-info w-25">
-                <img src="./resources/pp.png" alt="">
-            </div>
-        </div>
-    </main>
-
-
-
+   
 
 
 
