--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -63,7 +63,7 @@
   <main>
     <!-- Main Content  -------------------------------->
 
-    <!-- carasol -->
+    <!-- carasol ------------------------------------------------------------------------>
     <section class="sec1">
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
@@ -151,7 +151,7 @@
     </section>
 
 
-    <!-- section 2 -->
+    <!-- flex 3 banner------------------------------------------------------------ -->
     <section class="d-flex">
       <div class="banner d-flex h-auto col ">
         <div class="left row-4">
@@ -204,57 +204,40 @@
 
     </section>
 
-    <section class="lg:grid md:grid grid lg:grid-cols-6 md:grid-cols-3 grid-cols-2 gap-8 mt-12">
-      <div class="category">
-          <h1 class="text-center p-4">Browse By Category</h1>
-          <div class="container">
-              <div class="row">
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Phones.png" class="img-fluid" alt="Phones">
-                          <h2 class="mt-2">Phones</h2>
-                      </div>
-                  </div>
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Smart Watches.png" class="img-fluid" alt="Smart Watches">
-                          <h2 class="mt-2">Smart Watches</h2>
-                      </div>
-                  </div>
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Cameras.png" class="img-fluid" alt="Cameras">
-                          <h2 class="mt-2">Cameras</h2>
-                      </div>
-                  </div>
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Headphones.png" class="img-fluid" alt="Headphones">
-                          <h2 class="mt-2">Headphones</h2>
-                      </div>
-                  </div>
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Computers.png" class="img-fluid" alt="Computers">
-                          <h2 class="mt-2">Computers</h2>
-                      </div>
-                  </div>
-                  <div class="col">
-                      <div class="item-box border rounded p-3 text-center mb-4">
-                          <img src="icon/Icon_Gaming.png" class="img-fluid" alt="Gaming">
-                          <h2 class="mt-2">Gaming</h2>
-                      </div>
-                  </div>
-              </div>
+
+<!-- Category ---------------------------------------------------------------------- -->
+    <section>
+      <h1 class="p-4">Browse By Category</h1>
+      <div class="cont d-flex">
+          <div class="box">
+              <img src="icon/Icon_Phones.png" class="img-fluid" alt="Phones">
+              <h2 class="">Phones</h2>
+          </div>
+          <div class="box">
+              <img src="icon/Icon_Smart Watches.png" class="img-fluid" alt="Smart Watches">
+              <h2 class="mt-2">Smart Watches</h2>
+          </div>
+          <div class="box">
+              <img src="icon/Icon_Cameras.png" class="img-fluid" alt="Cameras">
+              <h2 class="mt-2">Cameras</h2>
+          </div>
+          <div class="box">
+              <img src="icon/Icon_Headphones.png" class="img-fluid" alt="Headphones">
+              <h2 class="mt-2">Headphones</h2>
+          </div>
+          <div class="box">
+              <img src="icon/Icon_Computers.png" class="img-fluid" alt="Computers">
+              <h2 class="mt-2">Computers</h2>
+          </div>
+          <div class="box">
+              <img src="icon/Icon_Gaming.png" class="img-fluid" alt="Gaming">
+              <h2 class="mt-2">Gaming</h2>
           </div>
       </div>
   </section>
   
 
-  <section>
 
-  </section>
-  
 
 
   </main>
