--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -236,7 +236,11 @@
       </div>
   </section>
   
+<!-- -------card-------------------------------------------------------------------------------- -->
 
+<section>
+  
+</section>
 
 
 
