--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -8,10 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
 
 
@@ -205,42 +206,124 @@
     </section>
 
 
-<!-- Category ---------------------------------------------------------------------- -->
+    <!-- Category ---------------------------------------------------------------------- -->
     <section>
       <h1 class="p-4">Browse By Category</h1>
       <div class="cont d-flex">
-          <div class="box">
-              <img src="icon/Icon_Phones.png" class="img-fluid" alt="Phones">
-              <h2 class="">Phones</h2>
-          </div>
-          <div class="box">
-              <img src="icon/Icon_Smart Watches.png" class="img-fluid" alt="Smart Watches">
-              <h2 class="mt-2">Smart Watches</h2>
-          </div>
-          <div class="box">
-              <img src="icon/Icon_Cameras.png" class="img-fluid" alt="Cameras">
-              <h2 class="mt-2">Cameras</h2>
-          </div>
-          <div class="box">
-              <img src="icon/Icon_Headphones.png" class="img-fluid" alt="Headphones">
-              <h2 class="mt-2">Headphones</h2>
-          </div>
-          <div class="box">
-              <img src="icon/Icon_Computers.png" class="img-fluid" alt="Computers">
-              <h2 class="mt-2">Computers</h2>
-          </div>
-          <div class="box">
-              <img src="icon/Icon_Gaming.png" class="img-fluid" alt="Gaming">
-              <h2 class="mt-2">Gaming</h2>
-          </div>
+        <div class="box">
+          <img src="icon/Icon_Phones.png" class="img-fluid" alt="Phones">
+          <h2 class="">Phones</h2>
+        </div>
+        <div class="box">
+          <img src="icon/Icon_Smart Watches.png" class="img-fluid" alt="Smart Watches">
+          <h2 class="mt-2">Smart Watches</h2>
+        </div>
+        <div class="box">
+          <img src="icon/Icon_Cameras.png" class="img-fluid" alt="Cameras">
+          <h2 class="mt-2">Cameras</h2>
+        </div>
+        <div class="box">
+          <img src="icon/Icon_Headphones.png" class="img-fluid" alt="Headphones">
+          <h2 class="mt-2">Headphones</h2>
+        </div>
+        <div class="box">
+          <img src="icon/Icon_Computers.png" class="img-fluid" alt="Computers">
+          <h2 class="mt-2">Computers</h2>
+        </div>
+        <div class="box">
+          <img src="icon/Icon_Gaming.png" class="img-fluid" alt="Gaming">
+          <h2 class="mt-2">Gaming</h2>
+        </div>
       </div>
-  </section>
-  
-<!-- -------card-------------------------------------------------------------------------------- -->
+    </section>
 
-<section>
-  
-</section>
+    <!-- -------card-------------------------------------------------------------------------------- -->
+
+    <section>
+      <div class="head-secton d-flex gap-5 m-5">
+        <p><a href="#" class="link-underline-dark" style="font-weight: bold; color: #000;">New Arrival</a></p>
+        <p>Bestseller </p>
+        <p>Featured Products </p>
+      </div>
+
+      <!-- card ------------------------------------------------>
+      <div class="row m-5">     
+        <div class="col-lg">
+          <div class="card m-4 " style="width: 18rem; box-shadow: 8px 8px 16px gray;">
+            <div class="card-actions justify-end">
+              <button class="btn1  m-2  rounded float-end" style="border-radius: 20px; background: none;">
+                <img src="./icon/Icon_32px_Like.png" class="" alt="">
+              </button>
+            </div>
+            <img src="/resources/Iphone 14 pro 1-1.png" class="card-img-top" alt="...">
+            <!-- importa -->
+            <div class="card-body d-flex justify-content-center flex-column">
+              <p class="card-text text-center">Apple Watch Series 9 GPS 41mm Starlight Aluminium Case </p>
+              <h3 class="text-center">$900</h3>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg">
+          <div class="card m-4 " style="width: 18rem; box-shadow: 8px 8px 16px gray;">
+            <div class="card-actions justify-end">
+              <button class="btn1  m-2  rounded float-end" style="border-radius: 20px; background: none;">
+                <img src="./icon/red.png" class="" alt="">
+              </button>
+            </div>
+            <img src="/resources/Iphone 14 pro 1-2.png" class="card-img-top" alt="...">
+            <!-- importa -->
+            <div class="card-body d-flex justify-content-center flex-column">
+              <p class="card-text text-center">Apple iPhone 14 Pro Max 128GB Deep Purple (MQ9T3RX/A)  </p>
+              <h3 class="text-center">$1300</h3>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg">
+          <div class="card m-4 " style="width: 18rem; box-shadow: 8px 8px 16px gray;">
+            <div class="card-actions justify-end">
+              <button class="btn1  m-2  rounded float-end" style="border-radius: 20px; background: none;">
+                <img src="./icon/Icon_32px_Like.png" class="" alt="">
+              </button>
+            </div>
+            <img src="/resources/Iphone 14 pro 1-3.png" class="card-img-top" alt="...">
+            <!-- importa -->
+            <div class="card-body d-flex justify-content-center flex-column">
+              <p class="card-text text-center">Blackmagic Pocket Cinema Camera 6k </p>
+              <h3 class="text-center">$2512</h3>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg">
+          <div class="card m-4 " style="width: 18rem; box-shadow: 8px 8px 16px gray;">
+            <div class="card-actions justify-end">
+              <button class="btn1  m-2  rounded float-end" style="border-radius: 20px; background: none;">
+                <img src="./icon/Icon_32px_Like.png" class="" alt="">
+              </button>
+            </div>
+            <img src="/resources/airpot.png" class="card-img-top" alt="...">
+            <!-- importa -->
+            <div class="card-body d-flex justify-content-center flex-column">
+              <p class="card-text text-center">AirPods Max Silver</p>
+              <h3 class="text-center">$821</h3>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      </div>
+
+    </section>
 
 
 
