--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -255,10 +255,10 @@
                 <img src="./icon/Icon_32px_Like.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-1.png" class="card-img-top" alt="...">
+            <img src="/resources/Iphone 14 pro 1-1.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
-              <p class="card-text text-center">Apple Watch Series 9 GPS 41mm Starlight Aluminium Case </p>
+              <p class="card-text text-center">Apple Watch Series 9 GPS Starlight Aluminium Case </p>
               <h3 class="text-center">$900</h3>
               <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
             </div>
@@ -273,7 +273,7 @@
                 <img src="./icon/red.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-2.png" class="card-img-top" alt="...">
+            <img src="/resources/Iphone 14 pro 1-2.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">Apple iPhone 14 Pro Max 128GB Deep Purple (MQ9T3RX/A)  </p>
@@ -291,7 +291,7 @@
                 <img src="./icon/Icon_32px_Like.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-3.png" class="card-img-top" alt="...">
+            <img src="/resources/Iphone 14 pro 1-3.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">Blackmagic Pocket Cinema Camera 6k </p>
@@ -310,7 +310,7 @@
                 <img src="./icon/Icon_32px_Like.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/airpot.png" class="card-img-top" alt="...">
+            <img src="/resources/airpot.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">AirPods Max Silver</p>
@@ -324,6 +324,8 @@
       </div>
 
     </section>
+
+
 
 
 
