--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -326,8 +326,21 @@
     </section>
 
 
-
-
+    <!-- ------------ last banner------------------------------------------------------------  -->
+    <section>
+      <div class="container-last d-flex">
+        <div class="left-sd">
+          <img src="./resources/ipad-2.png" class="w-100" alt="">
+        </div>
+        <div class="middle-sd">
+          <h1 style="color: white; font-weight: bold; font-size: 100px;"  ><span class="" style=" color: #25177B;">11.11</span> Sale</h1>
+          <p style="color: white;">Unlock incredible deals and savings during the electrifying 11.11 Sale—an opportunity you won't want to miss!</p>
+        </div>
+        <div class="right-sd">
+          <img src="./resources/mac.png" alt="">
+        </div>
+      </div>
+    </section>
 
   </main>
 
