--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -81,7 +81,7 @@
                     The iPhone 14 Pro Max Gold Edition combines elegance with cutting-edge technology, offering a
                     premium user experience in a sleek, gold-accented design.</p>
                   <h4 class="h-75">$1290</h4>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -105,7 +105,7 @@
                     color-infused back glass and new contoured edge; the Dynamic Island; a 48MP Main camera with 2x
                     Telephoto; and USB‑C. </p>
                   <h2 class="h-75">$1100</h2>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -128,7 +128,7 @@
                   <p class="">The iPhone 14 Pro comes with a 6.1-inch ProMotion OLED display with 1-120Hz adaptive
                     refresh rates, Dolby Vision, and a Face ID Dynamic Island that allows.</p>
                   <h2 class="h-75">$1199</h2>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <a href="#" class="btn btn-primary">Add To Cart</a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -153,7 +153,7 @@
 
 
     <!-- flex 3 banner------------------------------------------------------------ -->
-    <section class="d-flex">
+    <!-- <section class="d-flex">
       <div class="banner d-flex h-auto col ">
         <div class="left row-4">
           <div class="row g-0 bg-light position-center">
@@ -186,7 +186,7 @@
               <h1 class="mt-0">Macbook Air</h1>
               <p>Sleek design, powerful performance, stunning display. Ultimate portability. Perfect for work,
                 entertainment, and everything in between. </p>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <a href="#" class="btn btn-primary">Add To Cart</a>
             </div>
             <div class="col-md-6 mb-md-0 p-md-4 m-lg-auto">
               <img src="./resources/laptop.png" class="w-100" alt="...">
@@ -203,6 +203,53 @@
       </div>
 
 
+    </section> -->
+
+    <section class=" d-flex">
+      <div class="banner d-flex h-auto col ">
+        <div class="left row-4">
+          <!-- TOP  -->
+          <div class="row g-0  position-center" style="background: #FFFFFF;">
+            <div class="col-md-5 mb-md-0 p-md-4">
+              <img src="./resources/ipad.png" class="w-100  m-5" alt="...">
+            </div>
+            <div class="col-md-5 p-4 ps-md-0 m-auto">
+              <h1 class="mt-0">iPad 9 </h1>
+              <p>Introducing the iPad 9: Sleek design, powerful performance. Enhance productivity, immerse in
+                entertainment. Capture memories, stay organized. Endless apps for customization. Welcome to the future.
+              </p>
+            </div>
+          </div>
+          <!-- DOWN  -->
+          <div class="row g-0  position-center" style="background: #ADC2D7;">
+            <div class="col-md-5 mb-md-0 p-md-4">
+              <img src="./resources/airpot.png" class="w-75 m-5 " alt="...">
+            </div>
+            <div class="col-md-5 p-4 ps-md-0 m-auto">
+              <h1 class="mt-0">Apple AirPods Max</h1>
+              <p>Luxurious design, wireless convenience. Apple AirPods Max redefine audio experience.</p>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- ---- RIGHT--  -->
+
+        <div class="right-column row-4 bg-light" style="background: #EDEDED;">
+          <div class="row g-0  position-center">
+            <div class="col-md-5 p-4 ps-md-0 m-auto">
+              <h1 class="mt-0">Macbook Air</h1>
+              <p>Sleek design, powerful performance, stunning display. Ultimate portability. Perfect for work,
+                entertainment, and everything in between.</p>
+              <a href="#" class="btn btn-primary">Add To Cart</a>
+            </div>
+            <div class="col-md-6 mb-md-0 p-md-4 m-lg-auto">
+              <img src="./resources/laptop.png" class=" w-100 m-auto align-items-center" alt="...">
+            </div>
+          </div>
+
+
+        </div>
     </section>
 
 
@@ -240,14 +287,25 @@
     <!-- -------card-------------------------------------------------------------------------------- -->
 
     <section>
-      <div class="head-secton d-flex gap-5 m-5">
-        <p><a href="#" class="link-underline-dark" style="font-weight: bold; color: #000;">New Arrival</a></p>
-        <p>Bestseller </p>
-        <p>Featured Products </p>
-      </div>
 
+      <div class="d-flex mb-3">
+        <div class="p-2">
+          <div class="under-hd d-flex gap-5 m-5">
+            <p><a href="#" class="link-underline-dark" style="font-weight: bold; color: #000;">New Arrival</a></p>
+            <p>Bestseller</p>
+            <p>Featured Products</p>
+          </div>
+        </div>
+        
+        <div class="ms-auto p-2">
+          <div class="head-section1  m-5 align-content-end">
+            <i id="prevIcon" class="fas fa-chevron-left"></i> <!-- Previous icon -->
+            <i id="nextIcon" class="fas fa-chevron-right"></i> <!-- Next icon -->
+          </div>
+        </div>
+      </div>
       <!-- card ------------------------------------------------>
-      <div class="row m-5">     
+      <div class="row m-5">
         <div class="col-lg">
           <div class="card m-4 " style="width: 18rem; box-shadow: 8px 8px 16px gray;">
             <div class="card-actions justify-end">
@@ -255,12 +313,13 @@
                 <img src="./icon/Icon_32px_Like.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-1.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
+            <img src="/resources/Iphone 14 pro 1-1.png" class="card-img-top w-75 justify-content-center m-auto"
+              alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">Apple Watch Series 9 GPS Starlight Aluminium Case </p>
               <h3 class="text-center">$900</h3>
-              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add To Cart</a>
             </div>
           </div>
         </div>
@@ -273,12 +332,13 @@
                 <img src="./icon/red.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-2.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
+            <img src="/resources/Iphone 14 pro 1-2.png" class="card-img-top w-75 justify-content-center m-auto"
+              alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
-              <p class="card-text text-center">Apple iPhone 14 Pro Max 128GB Deep Purple (MQ9T3RX/A)  </p>
+              <p class="card-text text-center">Apple iPhone 14 Pro Max 128GB Deep Purple (MQ9T3RX/A) </p>
               <h3 class="text-center">$1300</h3>
-              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add To Cart</a>
             </div>
           </div>
         </div>
@@ -291,12 +351,13 @@
                 <img src="./icon/Icon_32px_Like.png" class="" alt="">
               </button>
             </div>
-            <img src="/resources/Iphone 14 pro 1-3.png" class="card-img-top w-75 justify-content-center m-auto" alt="...">
+            <img src="/resources/Iphone 14 pro 1-3.png" class="card-img-top w-75 justify-content-center m-auto"
+              alt="...">
             <!-- importa -->
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">Blackmagic Pocket Cinema Camera 6k </p>
               <h3 class="text-center">$2512</h3>
-              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add To Cart</a>
             </div>
           </div>
         </div>
@@ -315,7 +376,7 @@
             <div class="card-body d-flex justify-content-center flex-column">
               <p class="card-text text-center">AirPods Max Silver</p>
               <h3 class="text-center">$821</h3>
-              <a href="#" class="btn btn-primary align-content-center m-auto">Add Card</a>
+              <a href="#" class="btn btn-primary align-content-center m-auto">Add To Cart</a>
             </div>
           </div>
         </div>
@@ -333,8 +394,10 @@
           <img src="./resources/ipad-2.png" class="w-100" alt="">
         </div>
         <div class="middle-sd">
-          <h1 style="color: white; font-weight: bold; font-size: 100px;"  ><span class="" style=" color: #25177B;">11.11</span> Sale</h1>
-          <p style="color: white;">Unlock incredible deals and savings during the electrifying 11.11 Sale—an opportunity you won't want to miss!</p>
+          <h1 style="color: white; font-weight: bold; font-size: 100px;"><span class=""
+              style=" color: #25177B;">11.11</span> Sale</h1>
+          <p style="color: white;">Unlock incredible deals and savings during the electrifying 11.11 Sale—an opportunity
+            you won't want to miss!</p>
         </div>
         <div class="right-sd">
           <img src="./resources/mac.png" alt="">
@@ -345,94 +408,95 @@
   </main>
 
 
-  <!-- Footer Content Goes Here -->
+  <!-- Footer------------- -->
   <footer class="text-center text-lg-start text-white" style="background-color: #252541">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
-        <!-- Section: Links -->
-        <section>
-            <!--Grid row-->
-            <div class="row">
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Mobile Shop</h6>
-                    <p>
-                        Welcome to Mobile Shop, your one-stop destination for all your mobile needs. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-                <!-- Grid column -->
+      <!-- Section: Links -->
+      <section>
+        <!--Grid row-->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Mobile Shop</h6>
+            <p>
+              Welcome to Mobile Shop, your one-stop destination for all your mobile needs. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit.
+            </p>
+          </div>
+          <!-- Grid column -->
 
-                <hr class="w-100 clearfix d-md-none" />
+          <hr class="w-100 clearfix d-md-none" />
 
-                <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-                    <p><a class="text-white" href="#">Smartphones</a></p>
-                    <p><a class="text-white" href="#">Tablets</a></p>
-                    <p><a class="text-white" href="#">Accessories</a></p>
-                </div>
-                <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+            <p><a class="text-white" href="#">Smartphones</a></p>
+            <p><a class="text-white" href="#">Tablets</a></p>
+            <p><a class="text-white" href="#">Accessories</a></p>
+          </div>
+          <!-- Grid column -->
 
-                <hr class="w-100 clearfix d-md-none" />
+          <hr class="w-100 clearfix d-md-none" />
 
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
-                    <p><a class="text-white" href="#">My Account</a></p>
-                    <p><a class="text-white" href="#">Orders</a></p>
-                    <p><a class="text-white" href="#">Shipping</a></p>
-                    <p><a class="text-white" href="#">Help</a></p>
-                </div>
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
+            <p><a class="text-white" href="#">My Account</a></p>
+            <p><a class="text-white" href="#">Orders</a></p>
+            <p><a class="text-white" href="#">Shipping</a></p>
+            <p><a class="text-white" href="#">Help</a></p>
+          </div>
 
-                <!-- Grid column -->
-                <hr class="w-100 clearfix d-md-none" />
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" />
 
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                    <p><i class="fas fa-home mr-3"></i> Dhaka, Bangladesh</p>
-                    <p><i class="fas fa-envelope mr-3"></i> xyz@mobileshop.com</p>
-                    <p><i class="fas fa-phone mr-3"></i> +880154524522</p>
-                </div>
-                <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+            <p><i class="fas fa-home mr-3"></i> Dhaka, Bangladesh</p>
+            <p><i class="fas fa-envelope mr-3"></i> xyz@mobileshop.com</p>
+            <p><i class="fas fa-phone mr-3"></i> +880154524522</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+      <hr class="my-3">
+
+      <!-- Section: Copyright -->
+      <section class="p-3 pt-0">
+        <div class="row d-flex align-items-center">
+          <!-- Grid column -->
+          <div class="col-md-7 col-lg-8 text-center text-md-start">
+            <!-- Copyright -->
+            <div class="p-3">
+              © 2024 Mobile Shop. All rights reserved.
             </div>
-            <!--Grid row-->
-        </section>
-        <!-- Section: Links -->
+            <!-- Copyright -->
+          </div>
+          <!-- Grid column -->
 
-        <hr class="my-3">
-
-        <!-- Section: Copyright -->
-        <section class="p-3 pt-0">
-            <div class="row d-flex align-items-center">
-                <!-- Grid column -->
-                <div class="col-md-7 col-lg-8 text-center text-md-start">
-                    <!-- Copyright -->
-                    <div class="p-3">
-                        © 2024 Mobile Shop. All rights reserved.
-                    </div>
-                    <!-- Copyright -->
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
-                    <!-- Social media icons -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <!-- Grid column -->
-            </div>
-        </section>
-        <!-- Section: Copyright -->
+          <!-- Grid column -->
+          <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+            <!-- Social media icons -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-twitter"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <!-- Grid column -->
+        </div>
+      </section>
+      <!-- Section: Copyright -->
     </div>
     <!-- Grid container -->
-</footer>
+  </footer>
 
 
 
-  
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
