--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -62,7 +62,7 @@
   </header>
 
   <main>
-    <!-- Main Content  -------------------------------->
+    <!-- Main Content  -->
 
     <!-- carasol ------------------------------------------------------------------------>
     <section class="sec1">
@@ -152,58 +152,6 @@
     </section>
 
 
-    <!-- flex 3 banner------------------------------------------------------------ -->
-    <!-- <section class="d-flex">
-      <div class="banner d-flex h-auto col ">
-        <div class="left row-4">
-          <div class="row g-0 bg-light position-center">
-            <div class="col-md-6 mb-md-0 p-md-4">
-              <img src="./resources/ipad.png" class="w-50 align-items-center" alt="...">
-            </div>
-            <div class="col-md-6 p-4 ps-md-0 m-auto">
-              <h1 class="mt-0">
-                Apple AirPods
-                Max </h1>
-              <p>Introducing the iPad 9: Sleek design, powerful performance. Enhance productivity, immerse in
-                entertainment. Capture memories, stay organized. Endless apps for customization. Welcome to the future.
-                .</p>
-            </div>
-          </div>
-          <div class="row g-0 bg-light position-center">
-            <div class="col-md-6 mb-md-0 p-md-4">
-              <img src="./resources/airpot.png" class="w-50" alt="...">
-            </div>
-            <div class="col-md-6 p-4 ps-md-0 m-auto">
-              <h1 class="mt-0">Apple AirPods
-                Max </h1>
-              <p>Luxurious design, wireless convenience. Apple AirPods Max redefine audio experience. </p>
-            </div>
-          </div>
-        </div>
-        <div class="right-column row-4 ">
-          <div class="row3 g-0 bg-light position-center d-flex">
-            <div class="col-md-6 p-4 ps-md-0 m-auto">
-              <h1 class="mt-0">Macbook Air</h1>
-              <p>Sleek design, powerful performance, stunning display. Ultimate portability. Perfect for work,
-                entertainment, and everything in between. </p>
-              <a href="#" class="btn btn-primary">Add To Cart</a>
-            </div>
-            <div class="col-md-6 mb-md-0 p-md-4 m-lg-auto">
-              <img src="./resources/laptop.png" class="w-100" alt="...">
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-
-
-      </div>
-
-      </div>
-
-
-    </section> -->
 
     <section class=" d-flex">
       <div class="banner d-flex h-auto col ">
@@ -416,7 +364,7 @@
       <section>
         <!--Grid row-->
         <div class="row">
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Mobile Shop</h6>
             <p>
@@ -424,22 +372,22 @@
               consectetur adipisicing elit.
             </p>
           </div>
-          <!-- Grid column -->
+          <!-- col  -->
 
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
             <p><a class="text-white" href="#">Smartphones</a></p>
             <p><a class="text-white" href="#">Tablets</a></p>
             <p><a class="text-white" href="#">Accessories</a></p>
           </div>
-          <!-- Grid column -->
+          <!-- col  -->
 
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
             <p><a class="text-white" href="#">My Account</a></p>
@@ -448,17 +396,17 @@
             <p><a class="text-white" href="#">Help</a></p>
           </div>
 
-          <!-- Grid column -->
+          <!-- col  -->
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
             <p><i class="fas fa-home mr-3"></i> Dhaka, Bangladesh</p>
             <p><i class="fas fa-envelope mr-3"></i> xyz@mobileshop.com</p>
             <p><i class="fas fa-phone mr-3"></i> +880154524522</p>
           </div>
-          <!-- Grid column -->
+          <!-- col  -->
         </div>
         <!--Grid row-->
       </section>
@@ -469,7 +417,7 @@
       <!-- Section: Copyright -->
       <section class="p-3 pt-0">
         <div class="row d-flex align-items-center">
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-7 col-lg-8 text-center text-md-start">
             <!-- Copyright -->
             <div class="p-3">
@@ -477,16 +425,16 @@
             </div>
             <!-- Copyright -->
           </div>
-          <!-- Grid column -->
+          <!-- col  -->
 
-          <!-- Grid column -->
+          <!-- col  -->
           <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
             <!-- Social media icons -->
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-facebook-f"></i></a>
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-twitter"></i></a>
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-instagram"></i></a>
           </div>
-          <!-- Grid column -->
+          <!-- col  -->
         </div>
       </section>
       <!-- Section: Copyright -->
