--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -62,7 +62,7 @@
   </header>
 
   <main>
-    <!-- Main Content  -->
+    <!-- Main Content  -------------------------------->
 
     <!-- carasol ------------------------------------------------------------------------>
     <section class="sec1">
@@ -94,7 +94,7 @@
 
 
 
-          <div class="carousel-item active">
+          <div class="carousel-item ">
             <div class="row d-flex align-items-center">
               <div class="col-md-2">
               </div>
@@ -118,7 +118,7 @@
 
 
 
-          <div class="carousel-item active">
+          <div class="carousel-item ">
             <div class="row d-flex align-items-center">
               <div class="col-md-2">
               </div>
@@ -140,17 +140,16 @@
 
 
 
-          <button class="carousel-control-prev " type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next " type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
     </section>
-
 
 
     <section class=" d-flex">
@@ -364,7 +363,7 @@
       <section>
         <!--Grid row-->
         <div class="row">
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Mobile Shop</h6>
             <p>
@@ -372,22 +371,22 @@
               consectetur adipisicing elit.
             </p>
           </div>
-          <!-- col  -->
+          <!-- Grid column -->
 
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
             <p><a class="text-white" href="#">Smartphones</a></p>
             <p><a class="text-white" href="#">Tablets</a></p>
             <p><a class="text-white" href="#">Accessories</a></p>
           </div>
-          <!-- col  -->
+          <!-- Grid column -->
 
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
             <p><a class="text-white" href="#">My Account</a></p>
@@ -396,17 +395,17 @@
             <p><a class="text-white" href="#">Help</a></p>
           </div>
 
-          <!-- col  -->
+          <!-- Grid column -->
           <hr class="w-100 clearfix d-md-none" />
 
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
             <p><i class="fas fa-home mr-3"></i> Dhaka, Bangladesh</p>
             <p><i class="fas fa-envelope mr-3"></i> xyz@mobileshop.com</p>
             <p><i class="fas fa-phone mr-3"></i> +880154524522</p>
           </div>
-          <!-- col  -->
+          <!-- Grid column -->
         </div>
         <!--Grid row-->
       </section>
@@ -417,7 +416,7 @@
       <!-- Section: Copyright -->
       <section class="p-3 pt-0">
         <div class="row d-flex align-items-center">
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-7 col-lg-8 text-center text-md-start">
             <!-- Copyright -->
             <div class="p-3">
@@ -425,16 +424,16 @@
             </div>
             <!-- Copyright -->
           </div>
-          <!-- col  -->
+          <!-- Grid column -->
 
-          <!-- col  -->
+          <!-- Grid column -->
           <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
             <!-- Social media icons -->
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-facebook-f"></i></a>
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-twitter"></i></a>
             <a class="btn btn-outline-light btn-floating m-1" href="#"><i class="fab fa-instagram"></i></a>
           </div>
-          <!-- col  -->
+          <!-- Grid column -->
         </div>
       </section>
       <!-- Section: Copyright -->
