--- a/04 assignment 01/FashionQuest-main/index.html
+++ b/04 assignment 01/FashionQuest-main/index.html
@@ -77,7 +77,7 @@
               <div class="col-md-6">
                 <div class="ex">
                   <h1 class="h-100" style="font-weight: bold;">iPhone 14 Pro Max — Gold Edition </h1>
-                  <p class="">
+                  <p class="w-75 text-start">
                     The iPhone 14 Pro Max Gold Edition combines elegance with cutting-edge technology, offering a
                     premium user experience in a sleek, gold-accented design.</p>
                   <h4 class="h-75">$1290</h4>
@@ -101,7 +101,7 @@
               <div class="col-md-6">
                 <div class="ex">
                   <h1 class="h-100" style="font-weight: bold;">iPhone 15 Pro Max </h1>
-                  <p class="">A huge leap forward for iPhone with a gorgeous new design featuring a durable,
+                  <p class="w-75 text-start">A huge leap forward for iPhone with a gorgeous new design featuring a durable,
                     color-infused back glass and new contoured edge; the Dynamic Island; a 48MP Main camera with 2x
                     Telephoto; and USB‑C. </p>
                   <h2 class="h-75">$1100</h2>
@@ -125,7 +125,7 @@
               <div class="col-md-6">
                 <div class="ex">
                   <h1 class="h-100" style="font-weight: bold;">iPhone 14 Pro Max </h1>
-                  <p class="">The iPhone 14 Pro comes with a 6.1-inch ProMotion OLED display with 1-120Hz adaptive
+                  <p class="w-75 text-start">The iPhone 14 Pro comes with a 6.1-inch ProMotion OLED display with 1-120Hz adaptive
                     refresh rates, Dolby Vision, and a Face ID Dynamic Island that allows.</p>
                   <h2 class="h-75">$1199</h2>
                   <a href="#" class="btn btn-primary">Add To Cart</a>
