--- a/08 Assignment 02/index.html
+++ b/08 Assignment 02/index.html
@@ -12,7 +12,8 @@
 
 <body>
 
-    <!-- here goes to navber  -->
+   <main class="fullwebsite">
+     <!-- here goes to navber  -->
 
     <!-- logo  -->
     <nav class="flex justify-between items-center py-4 px-6">
@@ -45,6 +46,15 @@
 
 
 
+
+
+
+
+
+
+
+
+   </main>
 
     <script>
         function sortByViews() {
