--- a/jss/index.html
+++ b/jss/index.html
@@ -17,7 +17,7 @@
             <div class="logo-div">
                 <img src="./icon/Logo.png" alt="logo" class="max-w-24">
             </div>
-            <div class="sort-by-view bg-gray-200 rounded-lg py-2 px-4 cursor-pointer">
+            <div onclick="sortByViews" class="sort-btn bg-gray-200 rounded-lg py-2 px-4 cursor-pointer">
                 sort by view
             </div>
             <div class="bolg">
@@ -41,7 +41,7 @@
         <!-- error message -->
         <div id="error-message" class=" items-center">
        </div>
-       
+
     </main>
 
   
