--- a/z/index.html
+++ b/z/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ph Tube</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+
+<body class="bg-gray-100">
+
+  <!-- --- header section -->
+  <header class="py-4 bg-white shadow-md">
+    <div class="container mx-auto flex justify-between items-center px-5">
+      <img src="./icon/Logo.png" class="w-40" alt="">
+      <button onclick="sortByView()" id="sort-by-view" class="bg-gray-200 px-4 py-2 rounded-md text-lg">Sort By
+        View</button>
+      <button onclick="handleBlog()" class="py-2 px-6 rounded-lg bg-red-500 text-white ">
+        Blog
+      </button>
+    </div>
+  </header>
+  <hr>
+  <main class="container mx-auto py-8">
+
+    <!-- category -->
+    <section class="mt-8 container mx-auto px-3">
+      <div id="categories-container" class="flex gap-5 m-auto justify-center items-center text-center"></div>
+    </section>
+
+    <!-- card  -->
+    <section class="mt-10 container mx-auto px-5">
+      <div id="single-category-container"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 justify-items-center m-auto"></div>
+    </section>
+
+
+
+    <!-- --- error message -->
+    <section>
+      <div id="error-message" class="text-center mt-8 hidden">
+        <img src="./icon/Icon.png" alt="" class="w-44 mx-auto">
+        <h1 class="mt-4 text-lg  font-bold">Oops!! Sorry, There is no content here</h1>
+      </div>
+    </section>
+
+  </main>
+
+  <script src="./script.js"></script>
 </body>
+
 </html>
+
+<img class="h-80" src="" alt="">
